--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="funciones.js"></script>
 </head>
 <body>
-    <button>Saludar!</button>
+     
+    <button onclick="hola()">Saludar!</button>
+
+    
+
+
 </body>
 </html>
