--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="funciones.js"></script>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-     
-    <button onclick="hola()">Saludar!</button>
 
+    <div onclick="holadiv()">
+        <button onclick="hola()">Saludar!</button>
+    </div>
     
 
 
